src/snapshots/cargo_vet__tests__mock-simple-violation-wildcard.snap
---
source: src/tests.rs
expression: output
---
Violations Found!
  third-party1:10.0.0
    the own audit 10.0.0
      criteria: ["safe-to-deploy"]
    conflicts with own violation against *
      criteria: ["weak-reviewed"]

    this version is forbidden by own violation against *
      criteria: ["weak-reviewed"]


