src/snapshots/cargo_vet__tests__mock-simple-weaker-transitive-req-using-implies.snap
---
source: src/tests.rs
assertion_line: 553
expression: stdout
---
Vetting Succeeded (3 fully audited 2 partially audited, 0 unaudited)

