src/snapshots/cargo_vet__tests__mock-simple-weaker-transitive-req.snap
---
source: src/tests.rs
assertion_line: 526
expression: stdout
---
Vetting Succeeded (3 fully audited 2 partially audited, 0 unaudited)

