src/snapshots/cargo_vet__tests__mock-simple-wrongly-reversed-delta-to-unaudited.snap
---
source: src/tests.rs
assertion_line: 985
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0

dependency tree:
  root-package:10.0.0
    first-party:10.0.0
      third-party1:10.0.0
Use |cargo vet certify| to record the audits.
recommended audits:
  third-party1:10.0.0
    5.0.0 -> 10.0.0 -- +75


