src/snapshots/cargo_vet__tests__simple-policy-first-dep-extra-missing.snap
---
source: src/tests.rs
assertion_line: 1655
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party2:10.0.0 missing ["fuzzed"]

recommended audits:
    third-party2:10.0.0  for fuzzed  (100 lines)  (used by first-party) 

Use |cargo vet certify| to record the audits.

