src/snapshots/cargo_vet__tests__simple-policy-first-dep-stronger.snap
---
source: src/tests.rs
assertion_line: 1763
expression: stdout
---
Vetting Succeeded (3 fully audited)

