src/snapshots/cargo_vet__tests__simple-policy-first-dep-too-strong.snap
---
source: src/tests.rs
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["strong-reviewed"]

recommended audits for strong-reviewed:
    cargo vet inspect third-party1 10.0.0  (used by first-party)  (100 lines)

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

