src/snapshots/cargo_vet__tests__simple-policy-first-dep-weaker.snap
---
source: src/tests.rs
assertion_line: 1551
expression: stdout
---
Vetting Succeeded (5 fully audited, 0 partially audited, 0 unaudited)

