src/snapshots/cargo_vet__tests__simple-policy-first-extra-partially-missing.snap
---
source: src/tests.rs
assertion_line: 1672
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["fuzzed"]

dependency tree:
  root-package:10.0.0
    first-party:10.0.0
      third-party1:10.0.0 needs ["fuzzed"]
Use |cargo vet certify| to record the audits.
recommended audits:
    third-party1:10.0.0  0.0.0 -> 10.0.0 (+100) for ["fuzzed"]


